# serverFramework

./: .gitignore  CMakeLists.txt  Chinese.md  README.md  biji.md  hyn.h  hyn_include.h  index.html  iniFile.ini  main.cpp
.cache/clangd/index/: Address.cpp.A339E7B33F410E03.idx  Address.h.DB6A0395DE0C6C4A.idx  ByteArray.h.AEC11183D8338EC2.idx  Bytearray.cpp.B4558053A527023E.idx  FDManger.cpp.0AF842E3E4E7A966.idx  FDManger.h.CC061CD1E225EDB1.idx  Hook.cpp.3DE9A2D5851E9785.idx  Hook.h.D71DB537DDA823D5.idx  Http.cpp.B08BC47F5267BE05.idx  Http.h.16BA269E1083840B.idx  HttpConnection.cpp.3FACC36A1CE9C670.idx  HttpConnection.h.522807EAC5A21B4D.idx  HttpParser.cpp.6B28D16BEACE1A3D.idx  HttpParser.h.1AA280DEF6D818E5.idx  HttpServer.cpp.47954D1CA099EE4E.idx  HttpServer.h.E48A6A77BA876AC8.idx  HttpSession.cpp.3A98F7079CD56B4C.idx  HttpSession.h.C990F8352ACED652.idx  IOManager.cpp.AADD34D8DEFC151B.idx  IOManager.h.03F5A5EDE6B73885.idx  Logger.cpp.AF562FA6C4B6071B.idx  Logger.h.3E75D0FD3BDEDA76.idx  Scheduler.cpp.1EF8975D98885865.idx  Scheduler.h.DB9FF198C03A088A.idx  Servlet.cpp.BE95F93B96462558.idx  Servlet.h.D6807CF02424FA9B.idx  Socket.cpp.57F4336D614468B2.idx  Socket.h.B67AFCE5F924EC9F.idx  SocketStream.cpp.9CB208C4B31D3339.idx  SocketStream.h.33294C925999C451.idx  Stream.cpp.63ECD74C025F5C72.idx  Stream.h.F4887F9E9C900E99.idx  TcpServer.cpp.A793C5B198CBB545.idx  TcpServer.h.731C3EFB55B25A82.idx  Timer.cpp.EE1466EA66BC117F.idx  Timer.h.C06A427657FD6AF5.idx  _Singleton.h.4BD380EDCF0768DB.idx  endian.h.79AD3E676CB69D44.idx  exceptdef.h.D3F79D82E1C33E0E.idx  fiber.cpp.DBF7B9DD87C542C2.idx  (+17 more)
README/: fiber.md  scheduler.md
dgywgfuyguefierjopgkr/: 1.Logger_and_ini.md  2.Thread.md  3.Fiber.md  4.Scheduler.md  Scheduler.md
examples/: echo_server.h
include/: FDManger.h  Hook.h  IOManager.h  Scheduler.h  Timer.h  config.h  fiber.h  hyn_include.h  iniFile.h  macro.h  mutex.h  singleton.h  thread.h  util.h
src/: Address.cpp  Address.h  ByteArray.h  Bytearray.cpp  Config.h  FDManger.cpp  FDManger.h  Hook.cpp  Hook.h  Http.cpp  Http.h  HttpConnection.cpp  HttpConnection.h  HttpParser.cpp  HttpParser.h  HttpServer.cpp  HttpServer.h  HttpSession.cpp  HttpSession.h  IOManager.cpp  IOManager.h  Logger.cpp  Logger.h  Scheduler.cpp  Scheduler.h  Servlet.cpp  Servlet.h  Socket.cpp  Socket.h  SocketStream.cpp  SocketStream.h  Stream.cpp  Stream.h  TcpServer.cpp  TcpServer.h  Timer.cpp  Timer.h  URI.h  URI.rl  _Singleton.h  (+19 more)
test/: Config_test.h  test_Socket.h  test_address.h  test_bytesArray.h  test_fiber.h  test_hook.h  test_http.h  test_http_connection.h  test_http_server.h  test_iomanager.h  test_parser.h  test_scheduler.h  test_tcpserver.h  thread_test.h  util_test.h
